--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.7
   url_launcher: ^6.3.0
+  supabase_flutter: ^2.3.4  # Supabase client for auth & data
+  flutter_dotenv: ^5.1.0  # For loading environment variables from .env
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +57,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/
     - assets/logo.png
     - assets/mail.svg
