--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,12 @@ dependencies:
   flutter_tts: ^4.2.5  # Text-to-Speech functionality
   uuid: ^4.0.0  # For generating unique message IDs
   speech_to_text: ^7.0.0  # Speech recognition for mic input
+  provider: ^6.1.1  # State management
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
