--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   http: ^1.2.0
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
+  fl_chart: ^0.66.0
 
 dev_dependencies:
   flutter_test:
